📝 🔥 remove unnecessaries and navbar

--- a/docs/i18n/en/docusaurus-theme-classic/navbar.json
+++ b/docs/i18n/en/docusaurus-theme-classic/navbar.json
@@ -1,6 +1,6 @@
 {
   "title": {
-    "message": "Gamium Docs",
+    "message": "Gamium",
     "description": "The title in the navbar"
   },
   "item.label.Gamium": {
