--- a/docs/docs/api/client/typescript/api/classes/by.mdx
+++ b/docs/docs/api/client/typescript/api/classes/by.mdx
@@ -6,19 +6,23 @@ toc_max_heading_level: 4
 
 # By <s generated />
 
-[GamiumObject 식별하기](../../objectpath) 에서 사용되는 클래스입니다.
+Class used by [Identifying GamiumObject] (../../objectpath).
 
-<hr class="solid" />  <s generated />
+<hr class="solid" /> <s generated />
 
 ## Methods <s generated />
 
 ### path <s generated />
 
-<s childtag /> <code style={{ position: 'relative', top: '-20px', fontSize: '70%' }} children="public" /> <code style={{ position: 'relative', top: '-20px', fontSize: '70%' }} children="static" /> <s
-  generated
-/>
+<s childtag /> <code
+  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
+  children="public"
+/> <code
+  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
+  children="static"
+/> <s generated />
 
-Object Path를 사용하여 Object를 찾습니다.
+Use the Object Path to locate the object.
 
 ##### Usage
 
@@ -26,31 +30,45 @@ Object Path를 사용하여 Object를 찾습니다.
 const cameraObj = await gamium.findObject(By.path('/Main Camera[1]'));
 ```
 
-<s childtag /> <code style={{ position: 'relative', top: '-20px', fontSize: '70%' }} children="public" /> <code style={{ position: 'relative', top: '-20px', fontSize: '70%' }} children="static" /> <s
-  generated
-/>
+<s childtag /> <code
+  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
+  children="public"
+/> <code
+  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
+  children="static"
+/> <s generated />
 
-<s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='static'/> <s generated />
+<s childtag /> <code
+  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
+  children="public"
+/> <code
+  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
+  children="static"
+/> <s generated />
 
 ##### Arguments <s generated />
 
-- str [`string`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) <s generated />
+- str [`string`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) <s generated />
 
-  - `Object path`를 입력합니다.
+  - Enter 'Object path'.
 
 ##### Returns <s generated />
 
-- [`By`]( by) <s generated />
+- [`By`](by) <s generated />
 
-<hr class="solid" />  <s generated />
+<hr class="solid" /> <s generated />
 
 ### tag <s generated />
 
-<s childtag /> <code style={{ position: 'relative', top: '-20px', fontSize: '70%' }} children="public" /> <code style={{ position: 'relative', top: '-20px', fontSize: '70%' }} children="static" /> <s
-  generated
-/>
+<s childtag /> <code
+  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
+  children="public"
+/> <code
+  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
+  children="static"
+/> <s generated />
 
-Object Tag를 사용하여 Object를 찾습니다.
+Use the Object Tag to locate the object.
 
 ##### Usage
 
@@ -58,31 +76,40 @@ Object Tag를 사용하여 Object를 찾습니다.
 const cameraObj = await gamium.findObject(By.tag('MainCamera'));
 ```
 
-<s childtag /> <code style={{ position: 'relative', top: '-20px', fontSize: '70%' }} children="public" /> <code style={{ position: 'relative', top: '-20px', fontSize: '70%' }} children="static" /> <s
-  generated
-/>
+<s childtag /> <code
+  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
+  children="public"
+/> <code
+  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
+  children="static"
+/> <s generated />
 
-<s childtag /> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='public'/> <code style={{ position:'relative', top:'-20px', fontSize:'70%'}} children='static'/> <s generated />
+<s childtag /> <code
+  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
+  children="public"
+/> <code
+  style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
+  children="static"
+/> <s generated />
 
 ##### Arguments <s generated />
 
-- str [`string`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) <s generated />
+- str [`string`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) <s generated />
 
-  - `Object Tag`를 입력합니다.
+  - Enter 'Object Tag'.
 
 ##### Returns <s generated />
 
-- [`By`]( by) <s generated />
+- [`By`](by) <s generated />
 
-<hr class="solid" />  <s generated />
+<hr class="solid" /> <s generated />
 
 ## Properties <s generated />
 
-#### by [`ObjectLocatorBy`]( ../enums/object-locator-by) <s generated />
+#### by [`ObjectLocatorBy`](../enums/object-locator-by) <s generated />
 
-<hr class="solid" />  <s generated />
+<hr class="solid" /> <s generated />
 
-#### str [`string`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) <s generated />
+#### str [`string`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) <s generated />
 
-<hr class="solid" />  <s generated />
-
+<hr class="solid" /> <s generated />
