--- a/docs/docs/api/client/typescript/api/types/object-info.mdx
+++ b/docs/docs/api/client/typescript/api/types/object-info.mdx
@@ -1,5 +1,4 @@
 ---
-sidebar_position: 3
 title: ObjectInfo
 toc_max_heading_level: 4
 ---
@@ -12,13 +11,13 @@ toc_max_heading_level: 4
 
 #### path [`string`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) <s generated />
 
-- `Object path`를 나타냅니다.
+- Indicates `Object path`.
 
 <hr class="solid" /> <s generated />
 
 #### name [`string`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) <s generated />
 
-- 해당 오브젝트의 이름입니다.
+- The name of the object.
 
 <hr class="solid" /> <s generated />
 
@@ -28,42 +27,42 @@ toc_max_heading_level: 4
 
 #### tag [`string`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String)[] <s generated />
 
-- 오브젝트에 표시된 태그들입니다.
+- Tags displayed in the object.
 
 <hr class="solid" /> <s generated />
 
 #### isActive [`boolean`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean) <s generated />
 
-- 오브젝트가 활성화되었는지 여부입니다.
+- Whether the object is active.
 
 <hr class="solid" /> <s generated />
 
 #### screenPosition [`Vector3`](vector3) <s generated />
 
-- 오브젝트의 스크린상의 위치입니다.
+- The location of the object on the screen.
 
 <hr class="solid" /> <s generated />
 
 #### screenRectSize [`Vector2`](vector2) <s generated />
 
-- 오브젝트의 스크린상의 사각형 사이즈입니다.
+- The square size on the screen of the object.
 
 <hr class="solid" /> <s generated />
 
 #### position [`Vector3`](vector3) <s generated />
 
-- 오브젝트의 월드상의 위치입니다.
+- The location of the object in the world.
 
 <hr class="solid" /> <s generated />
 
 #### rotation [`Vector4`](vector4) <s generated />
 
-- 오브젝트의 월드상의 회전입니다.
+- Rotation of the object in the world.
 
 <hr class="solid" /> <s generated />
 
 #### text [`string`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) <s generated />
 
-- 오브젝트가 가지고있는 text입니다. text를 포함하지 않는다면 빈 문자열입니다.
+- Text that the object has. Empty string unless text is included.
 
 <hr class="solid" /> <s generated />
